Change Goodle Cloud service account to base64 encoding

--- a/test/e2e/provisioning/testdata/machinedeployment-gce.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-gce.yaml
@@ -25,14 +25,13 @@ spec:
           cloudProvider: "gce"
           cloudProviderSpec:
             # If empty, can be set via GOOGLE_SERVICE_ACCOUNT env var
-            serviceAccount: |
-              << GOOGLE_SERVICE_ACCOUNT >>
+            serviceAccount: "<< GOOGLE_SERVICE_ACCOUNT >>"
             # See https://cloud.google.com/compute/docs/regions-zones/
             zone: "europe-west3-a"
             # See https://cloud.google.com/compute/docs/machine-types
             machineType: "n1-standard-2"
             # In GB
-            diskSize: 50
+            diskSize: 25
             # Can be 'pd-standard' or 'pd-ssd'
             diskType: "pd-standard"
             labels:
