Correct comments regarding CentOS in GCE yaml files

--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -53,7 +53,7 @@ spec:
             diskType: "pd-standard"
             labels:
               "kubernetes_cluster": "my-cluster"
-          # Can be 'ubuntu', 'coreos' or 'centos'
+          # Can be 'ubuntu' or 'coreos'
           operatingSystem: "coreos"
           operatingSystemSpec:
             disableAutoUpdate: true
