Fixes and adding plugins to Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea
-machine-controller
+machine-controller*
 .terraform
 terraform.tfstate
 terraform.tfstate.backup
@@ -12,3 +12,6 @@ examples/*.pem
 examples/*.csr
 examples/*.srl
 /webhook
+# As long as we don't support modules.
+go.mod
+go.sum
