Support for network configuration of GCE instances

--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -49,6 +49,10 @@ spec:
             machineType: "n1-standard-2"
             # In GB
             diskSize: 50
+            # ether of two network/subnetwork could be specified
+            # in case if both empty — default network will be used
+            network: "my-cool-network"
+            subnetwork: "my-cool-subnetwork"
             # Can be 'pd-standard' or 'pd-ssd'
             diskType: "pd-standard"
             labels:
