--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -49,7 +49,8 @@ spec:
             machineType: "n1-standard-2"
             # In GB
             diskSize: 50
-            # ether of two network/subnetwork could be specified
+            # The name or self_link of the network and subnetwork to attach this interface to;
+            # either of both can be provided, otherwise default network will taken
             # in case if both empty — default network will be used
             network: "my-cool-network"
             subnetwork: "my-cool-subnetwork"
