--- a/test/e2e/provisioning/testdata/machinedeployment-hetzner.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-hetzner.yaml
@@ -27,7 +27,7 @@ spec:
             token: << HETZNER_TOKEN >>
             serverType: "cx11"
             datacenter: ""
-            location: "fsn1"
+            location: "nbg1"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
