--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -135,3 +135,8 @@ required = [
 [[constraint]]
   name = "cloud.google.com/go"
   version = "0.36.0"
+
+[[constraint]]
+  name = "github.com/packethost/packngo"
+  revision = "a02c426e4888c0bb39c3abcf249c8d048e2c6e40"
+
