--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
@@ -24,16 +24,15 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "vsphere"
           cloudProviderSpec:
-            templateVMName: '<< OS_NAME >>-template'
+            templateVMName: 'machine-controller-e2e-<< OS_NAME >>'
             username: '<< VSPHERE_USERNAME >>'
             vsphereURL: '<< VSPHERE_ADDRESS >>'
-            datacenter: 'Customer-A'
-            folder: '/Customer-A/vm/e2e-tests'
+            datacenter: 'dc-1'
+            folder: '/dc-1/vm/e2e-tests'
             password: << VSPHERE_PASSWORD >>
             # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
             cluster: '<< VSPHERE_CLUSTER >>'
-            datastore: datastore1
-            allowInsecure: true
+            datastore: exsi-nas
             cpus: 2
             MemoryMB: 2048
           operatingSystem: "<< OS_NAME >>"
