Revert "Vsphere: Do not populate cloud config, its not required"
This reverts commit 5b4e0a346474132862367349d3a59ccf38675f43.

--- a/pkg/userdata/ubuntu/testdata/kubelet-version-without-v-prefix.yaml
+++ b/pkg/userdata/ubuntu/testdata/kubelet-version-without-v-prefix.yaml
@@ -242,6 +242,10 @@ write_files:
     [Service]
     Environment="KUBELET_EXTRA_ARGS=--resolv-conf=/run/systemd/resolve/resolv.conf"
 
+- path: "/etc/kubernetes/cloud-config"
+  content: |
+
+
 - path: "/etc/kubernetes/bootstrap-kubelet.conf"
   content: |
     apiVersion: v1
