test: add diskIops field
Signed-off-by: dinesh <dinesh1042@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
@@ -33,6 +33,8 @@ spec:
             instanceProfile: "kubernetes-v1"
             diskSize: 50
             diskType: "gp2"
+            ## Only application if diskType = io1 
+            diskIops: 500
             securityGroupIDs:
             - "sg-a2c195ca"
             tags:
