--- a/examples/aws-machinedeployment.yaml
+++ b/examples/aws-machinedeployment.yaml
@@ -58,6 +58,8 @@ spec:
             instanceProfile: "kubernetes-v1"
             diskSize: 50
             diskType: "gp2"
+            ## Only application if diskType = io1
+            diskIops: 500
             tags:
               "KubernetesCluster": "6qsm86c2d"
           # Can be 'ubuntu', 'coreos' or 'centos'
