--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,3 +36,4 @@ issues:
   - 'eviction\.go:221:4: the surrounding loop is unconditionally terminated'
   - '`client` can be `github.com/kubermatic/machine-controller/vendor/sigs.k8s.io/controller-runtime/pkg/client.Reader`'
   - '`client` can be `github.com/kubermatic/machine-controller/vendor/sigs.k8s.io/controller-runtime/pkg/client.StatusWriter`'
+  - 'cyclomatic complexity 31 of func `verifyMigrateUID` is high'
