--- a/pkg/userdata/coreos/testdata/v1.12.0-vsphere-proxy.yaml
+++ b/pkg/userdata/coreos/testdata/v1.12.0-vsphere-proxy.yaml
@@ -5,11 +5,38 @@ passwd:
         - ssh-rsa AAABBB
         - ssh-rsa CCCDDD
 
+networkd:
+  units:
+    - name: static-nic.network
+      contents: |
+        [Match]
+        # Because of difficulty predicting specific NIC names on different cloud providers,
+        # we only support static addressing on VSphere. There should be a single NIC attached
+        # that we will match by name prefix 'en' which denotes ethernet devices.
+        Name=en*
+
+        [Network]
+        DHCP=no
+        Address=192.168.81.4/24
+        Gateway=192.168.81.1
+        DNS=8.8.8.8
+
 
 systemd:
   units:
+    - name: update-engine.service
+      mask: true
+    - name: locksmithd.service
+      mask: true
+
     - name: docker.service
       enabled: true
+    - name: update-engine.service
+      dropins:
+        - name: 50-proxy.conf
+          contents: |
+            [Service]
+            Environment=ALL_PROXY=http://192.168.100.100:3128
 
     - name: download-healthcheck-script.service
       enabled: true
@@ -73,9 +100,9 @@ systemd:
         TimeoutStartSec=5min
         CPUAccounting=true
         MemoryAccounting=true
-        Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.10.3
+        Environment=KUBELET_IMAGE=docker://192.168.100.100:5000/machine-controller/hyperkube-amd64:v1.12.0
         Environment="RKT_RUN_ARGS=--uuid-file-save=/var/cache/kubelet-pod.uuid \
-          --insecure-options=image \
+          --insecure-options=image,http \
           --volume=resolv,kind=host,source=/etc/resolv.conf \
           --mount volume=resolv,target=/etc/resolv.conf \
           --volume cni-bin,kind=host,source=/opt/cni/bin \
@@ -104,11 +131,10 @@ systemd:
           --cni-bin-dir=/opt/cni/bin \
           --authorization-mode=Webhook \
           --client-ca-file=/etc/kubernetes/pki/ca.crt \
-          --cadvisor-port=0 \
           --rotate-certificates=true \
           --cert-dir=/etc/kubernetes/pki \
           --authentication-token-webhook=true \
-          --cloud-provider=openstack \
+          --cloud-provider=vsphere \
           --cloud-config=/etc/kubernetes/cloud-config \
           --hostname-override=node1 \
           --read-only-port=0 \
@@ -116,8 +142,9 @@ systemd:
           --lock-file=/tmp/kubelet.lock \
           --anonymous-auth=false \
           --protect-kernel-defaults=true \
-          --cluster-dns=10.10.10.10,10.10.10.11,10.10.10.12 \
+          --cluster-dns=10.10.10.10 \
           --cluster-domain=cluster.local \
+          --pod-infra-container-image="192.168.100.100:5000/machine-controller/pause:3.1" \
           --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
           --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
@@ -141,6 +168,12 @@ storage:
       mode: 0644
       contents:
         inline: |
+          HTTP_PROXY=http://192.168.100.100:3128
+          http_proxy=http://192.168.100.100:3128
+          HTTPS_PROXY=http://192.168.100.100:3128
+          https_proxy=http://192.168.100.100:3128
+          NO_PROXY=localhost,127.0.0.1
+          no_proxy=localhost,127.0.0.1
 
     - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
       filesystem: root
@@ -224,7 +257,7 @@ storage:
       mode: 0400
       contents:
         inline: |
-          {openstack-config:true}
+          {vsphere-config:true}
 
     - path: /etc/kubernetes/pki/ca.crt
       filesystem: root
@@ -288,7 +321,7 @@ storage:
       mode: 0644
       contents:
         inline: |
-          {"storage-driver":"overlay2","insecure-registries":[]}
+          {"storage-driver":"overlay2","insecure-registries":["192.168.100.100:5000"]}
 
     - path: /opt/bin/download.sh
       filesystem: root
@@ -297,11 +330,16 @@ storage:
         inline: |
           #!/bin/bash
           set -xeuo pipefail
+          source /etc/environment
+          export HTTP_PROXY HTTPS_PROXY
+          #setup some common directories
           mkdir -p /opt/bin/
           mkdir -p /var/lib/calico
           mkdir -p /etc/kubernetes/manifests
           mkdir -p /etc/cni/net.d
           mkdir -p /opt/cni/bin
+
+          # cni
           if [ ! -f /opt/cni/bin/loopback ]; then
               curl -L https://github.com/containernetworking/plugins/releases/download/v0.6.0/cni-plugins-amd64-v0.6.0.tgz | tar -xvzC /opt/cni/bin -f -
           fi
