--- a/pkg/userdata/centos/testdata/kubelet-v1.12-vsphere-proxy.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.12-vsphere-proxy.yaml
@@ -13,8 +13,8 @@ write_files:
     http_proxy=http://192.168.100.100:3128
     HTTPS_PROXY=http://192.168.100.100:3128
     https_proxy=http://192.168.100.100:3128
-    NO_PROXY=localhost,127.0.0.1
-    no_proxy=localhost,127.0.0.1
+    NO_PROXY=192.168.1.0/24
+    no_proxy=192.168.1.0/24
 
 - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
   content: |
@@ -169,7 +169,7 @@ write_files:
       --protect-kernel-defaults=true \
       --cluster-dns= \
       --cluster-domain=cluster.local \
-      --pod-infra-container-image="192.168.100.100:5000/machine-controller/pause:3.1" \
+      --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
       --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
       --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi
 
@@ -282,7 +282,7 @@ write_files:
 - path: /run/containers/registries.conf
   permissions: "0644"
   content: |
-    INSECURE_REGISTRY="--insecure-registry 192.168.100.100:5000"
+    INSECURE_REGISTRY="--insecure-registry 192.168.100.100:5000 --insecure-registry 10.0.0.1:5000"
 
 - path: /etc/systemd/system/docker.service.d/environment.conf
   permissions: "0644"
