--- a/pkg/userdata/coreos/testdata/v1.12.0-vsphere-proxy.yaml
+++ b/pkg/userdata/coreos/testdata/v1.12.0-vsphere-proxy.yaml
@@ -101,7 +101,7 @@ systemd:
         TimeoutStartSec=5min
         CPUAccounting=true
         MemoryAccounting=true
-        Environment=KUBELET_IMAGE=docker://192.168.100.100:5000/machine-controller/hyperkube-amd64:v1.12.0
+        Environment=KUBELET_IMAGE=docker://192.168.100.100:5000/kubernetes/hyperkube:v1.12.0
         Environment="RKT_RUN_ARGS=--uuid-file-save=/var/cache/kubelet-pod.uuid \
           --insecure-options=image,http \
           --volume=resolv,kind=host,source=/etc/resolv.conf \
@@ -145,7 +145,7 @@ systemd:
           --protect-kernel-defaults=true \
           --cluster-dns=10.10.10.10 \
           --cluster-domain=cluster.local \
-          --pod-infra-container-image="192.168.100.100:5000/machine-controller/pause:3.1" \
+          --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
           --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
           --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
@@ -173,8 +173,8 @@ storage:
           http_proxy=http://192.168.100.100:3128
           HTTPS_PROXY=http://192.168.100.100:3128
           https_proxy=http://192.168.100.100:3128
-          NO_PROXY=localhost,127.0.0.1
-          no_proxy=localhost,127.0.0.1
+          NO_PROXY=192.168.1.0/24
+          no_proxy=192.168.1.0/24
 
     - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
       filesystem: root
@@ -322,7 +322,7 @@ storage:
       mode: 0644
       contents:
         inline: |
-          {"storage-driver":"overlay2","insecure-registries":["192.168.100.100:5000"]}
+          {"storage-driver":"overlay2","insecure-registries":["192.168.100.100:5000","10.0.0.1:5000"]}
 
     - path: /opt/bin/download.sh
       filesystem: root
