--- a/pkg/userdata/coreos/testdata/v1.12.0-vsphere-proxy.yaml
+++ b/pkg/userdata/coreos/testdata/v1.12.0-vsphere-proxy.yaml
@@ -173,8 +173,8 @@ storage:
           http_proxy=http://192.168.100.100:3128
           HTTPS_PROXY=http://192.168.100.100:3128
           https_proxy=http://192.168.100.100:3128
-          NO_PROXY=192.168.1.0/24
-          no_proxy=192.168.1.0/24
+          NO_PROXY=192.168.1.0
+          no_proxy=192.168.1.0
 
     - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
       filesystem: root
