--- a/pkg/userdata/coreos/testdata/v1.12.0-vsphere-overwrite-cloudconfig.yaml
+++ b/pkg/userdata/coreos/testdata/v1.12.0-vsphere-overwrite-cloudconfig.yaml
@@ -306,7 +306,7 @@ storage:
       mode: 0644
       contents:
         inline: |
-          {"storage-driver":"overlay2","insecure-registries":[]}
+          {"storage-driver":"overlay2","insecure-registries":[],"registry-mirrors":[]}
 
     - path: /opt/bin/download.sh
       filesystem: root
