--- a/pkg/userdata/coreos/testdata/v1.9.2-disable-locksmith-aws.yaml
+++ b/pkg/userdata/coreos/testdata/v1.9.2-disable-locksmith-aws.yaml
@@ -5,27 +5,9 @@ passwd:
         - ssh-rsa AAABBB
         - ssh-rsa CCCDDD
 
-networkd:
-  units:
-    - name: static-nic.network
-      contents: |
-        [Match]
-        # Because of difficulty predicting specific NIC names on different cloud providers,
-        # we only support static addressing on VSphere. There should be a single NIC attached
-        # that we will match by name prefix 'en' which denotes ethernet devices.
-        Name=en*
-
-        [Network]
-        DHCP=no
-        Address=192.168.81.4/24
-        Gateway=192.168.81.1
-        DNS=8.8.8.8
-
 
 systemd:
   units:
-    - name: update-engine.service
-      mask: true
     - name: locksmithd.service
       mask: true
     - name: docker.service
@@ -95,7 +77,7 @@ systemd:
         CPUAccounting=true
         MemoryAccounting=true
         EnvironmentFile=-/etc/environment
-        Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.12.0
+        Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.9.2
         Environment="RKT_RUN_ARGS=--uuid-file-save=/var/cache/kubelet-pod.uuid \
           --insecure-options=image \
           --volume=resolv,kind=host,source=/etc/resolv.conf \
@@ -126,12 +108,12 @@ systemd:
           --cni-bin-dir=/opt/cni/bin \
           --authorization-mode=Webhook \
           --client-ca-file=/etc/kubernetes/pki/ca.crt \
+          --cadvisor-port=0 \
           --rotate-certificates=true \
           --cert-dir=/etc/kubernetes/pki \
           --authentication-token-webhook=true \
-          --cloud-provider=vsphere \
+          --cloud-provider=aws \
           --cloud-config=/etc/kubernetes/cloud-config \
-          --hostname-override=node1 \
           --read-only-port=0 \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
@@ -240,9 +222,7 @@ storage:
       mode: 0400
       contents:
         inline: |
-          my
-          custom
-          cloud-config
+          {aws-config:true}
 
     - path: /etc/kubernetes/pki/ca.crt
       filesystem: root
@@ -276,11 +256,6 @@ storage:
           kPe6XoSbiLm/kxk32T0=
           -----END CERTIFICATE-----
 
-    - path: /etc/hostname
-      filesystem: root
-      mode: 0600
-      contents:
-        inline: 'node1'
 
     - path: /etc/ssh/sshd_config
       filesystem: root
