Hcloud: Allow configuring labels
Signed-off-by: Alvaro Aleman <alv2412@googlemail.com>

--- a/examples/hetzner-machinedeployment.yaml
+++ b/examples/hetzner-machinedeployment.yaml
@@ -44,8 +44,12 @@ spec:
                 name: machine-controller-hetzner
                 key: token
             serverType: "cx21"
+            # Optional
             datacenter: ""
             location: "fsn1"
+            # Optional
+            labels:
+              my: label
           operatingSystem: "ubuntu"
           operatingSystemSpec:
             distUpgradeOnBoot: false
