Reset flag parsing and add exception for cyclomatic complexity of main
Signed-off-by: Frank Mueller <mail@themue.dev>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -37,3 +37,4 @@ issues:
   - '`client` can be `github.com/kubermatic/machine-controller/vendor/sigs.k8s.io/controller-runtime/pkg/client.Reader`'
   - '`client` can be `github.com/kubermatic/machine-controller/vendor/sigs.k8s.io/controller-runtime/pkg/client.StatusWriter`'
   - 'cyclomatic complexity 31 of func `verifyMigrateUID` is high'
+  - 'cyclomatic complexity 31 of func `main` is high'
