--- a/pkg/userdata/ubuntu/testdata/vsphere-proxy.yaml
+++ b/pkg/userdata/ubuntu/testdata/vsphere-proxy.yaml
@@ -237,7 +237,8 @@ write_files:
       --cluster-domain=cluster.local \
       --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
       --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-      --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi
+      --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
+      --cgroup-driver=systemd
 
     [Install]
     WantedBy=multi-user.target
@@ -324,7 +325,7 @@ write_files:
 - path: /etc/docker/daemon.json
   permissions: "0644"
   content: |
-    {"storage-driver":"overlay2","insecure-registries":["192.168.100.100:5000","10.0.0.1:5000"],"registry-mirrors":[]}
+    {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","insecure-registries":["192.168.100.100:5000","10.0.0.1:5000"],"registry-mirrors":[]}
 
 - path: /etc/systemd/system/kubelet-healthcheck.service
   permissions: "0644"
