Azure: Assign security group to instances

--- a/examples/azure-machinedeployment.yaml
+++ b/examples/azure-machinedeployment.yaml
@@ -69,6 +69,7 @@ spec:
             subnetName: "<< SUBNET_NAME >>"
             routeTableName: "<< ROUTE_TABLE_NAME >>"
             assignPublicIP: false
+            securityGroupName: my-security-group
           operatingSystem: "coreos"
           operatingSystemSpec:
             distUpgradeOnBoot: false
