--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -143,3 +143,7 @@ required = [
 [[constraint]]
   name = "github.com/docker/distribution"
   version = "v2.7.1"
+
+[[constraint]]
+  name = "github.com/kubevirt/client-go"
+  version = "^0.19.0"
