Kubevirt provider: Use PVCs to back machines (#595)
* 3235: add minio and cdi operator

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: add virtual machine

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: update virtual machine

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: create virtual machine instances from vms

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: create virtual machine instances from vms

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: update kubevirt to the latest version, v0.19.0

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: get the right image to the right os

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: refactoring the kubevirt provider

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: refactoring the kubevirt provider

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: remove the registryImage property

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: test vmi spawning without migrateUID image

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: revert the the exclusion of migrateUID image

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moath.qasim@ligatus.com>

* 3235: changing the configuration for the VMs

Signed-off-by: Moath Qasim <moath@loodse.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* 3235: changing the image for the VMs

Signed-off-by: Moath Qasim 

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -147,3 +147,7 @@ required = [
 [[constraint]]
   branch = "master"
   name = "github.com/cherryservers/cherrygo"
+  
+[[constraint]]
+  name = "github.com/kubevirt/client-go"
+  version = "^0.19.0"
