--- a/pkg/userdata/coreos/testdata/v1.15.0-vsphere.yaml
+++ b/pkg/userdata/coreos/testdata/v1.15.0-vsphere.yaml
@@ -94,6 +94,7 @@ systemd:
         ExecStartPre=/bin/mkdir -p /opt/cni/bin
         ExecStartPre=-/usr/bin/rkt rm --uuid-file=/var/cache/kubelet-pod.uuid
         ExecStartPre=-/bin/rm -rf /var/lib/rkt/cas/tmp/
+        ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
         ExecStart=/usr/lib/coreos/kubelet-wrapper \
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/etc/kubernetes/kubelet.conf \
@@ -145,16 +146,26 @@ storage:
           SystemMaxUse=5G
 
 
-    - path: /etc/modules-load.d/k8s.conf
+    - path: /opt/load-kernel-modules.sh
       filesystem: root
-      mode: 0644
+      mode: 0755
       contents:
         inline: |
-          ip_vs
-          ip_vs_rr
-          ip_vs_wrr
-          ip_vs_sh
-          nf_conntrack_ipv4
+          #!/usr/bin/env bash
+          set -euo pipefail
+
+          kernel=$(uname -r)
+          kernel_main_version=${kernel:0:1}
+
+          modprobe ip_vs
+          modprobe ip_vs_rr
+          modprobe ip_vs_wrr
+          modprobe ip_vs_sh
+
+          # nf_conntrack_ipv4 got removed in the kernel version 5.0
+          if [ "${kernel_main_version}" -le "4" ]; then
+            modprobe nf_conntrack_ipv4
+          fi
 
 
     - path: /etc/sysctl.d/k8s.conf
